Test/errors/err_declarations.cb
// Declaration errors: missing returns, enums, generics, interfaces, overloads

int add(int a, int b) { return a + b; }

struct Point
{
    int x = 0;
    int y = 0;
};

interface IGreet
{
    int greet();
};

expect_error("missing a return statement") {
    int test_missing_return(int x)
    {
        int y = x * 2;
    }
}

expect_error("missing return statement") {
    int test_lambda_missing_return()
    {
        function<int(int)> f = (int x) => { int y = x + 1; };
        return 0;
    }
}

expect_error("enum value must be a constant integer expression") {
    enum BadEnum : int { A = 1, B = "hello" };
}

expect_error("Generic type parameter must be an identifier, not a built-in type") {
    struct Box<int> { int value = 0; }
}

expect_error("does not implement") {
    class Foo : IGreet
    {
        int x = 0;
    };
}

expect_error("named argument") {
    int test_named_arg_mismatch()
    {
        int result = add(z: 1, b: 2);
        return result;
    }
}

expect_error("no overload of 'operator string'") {
    int test_operator_string_missing()
    {
        Point p;
        p.x = 1;
        p.y = 2;
        string s = operator string(p);
        return 0;
    }
}

extern int main()
{
    return 0;
}
